web/css/menu.css
.navbar > .container{
        margin:0px 0px 0px;
        width:100%;
        padding-right:0px;

    }
/* navigation style */ 
.nav1{ 
    height: 30px; 
    background-color: #000000;
    line-height: 30px;
    margin-left: 0px; 
    padding: 0px 0px 0px 10px; 

    float:right;
    font-size: 14px;
    text-align:justify;
    font-family: Century Gothic;
    margin-bottom: 0;
} 

.nav1 a{
    color: #FFFFFF;
    padding: 0px 20px 0px 10px;
    text-decoration: none;

}

.nav1 a:hover{
    text-shadow: 0px 0px 2px #FFFFFF;
}




.nav2{ 
    height: 60px; 

    #background: #3AB3A9; 
    min-width:500px; 
    margin-left: 0px; 
    padding: 25px; 
    width:80%;
    float:right;
    font-family: Corbel;
    font-size: 14px;
}     
 



/*main menu*/ 
#nav li{ 
    list-style: none; 
    display: block; 
    float: right; 
    height: 40px; 
    position: relative;
    /* border: 1px solid rgba(0, 0, 0, 0); *//*прозрачная граница, чтобы избежать мерцания*/ 
    #border-right: 1px solid #FFFFFF;
    width:150px;
    z-index : 2;
 
} 
 
#nav li a{ 
    padding: 0px 0px 0px 8px; 
    margin: 0px; 
    line-height: 40px; 
    text-decoration: none; 
   /*  height: 40px;  */
    color: #FFFFFF; 
    text-shadow: 1px 1px 1px #66696B;
    text-align:center;   
    display: table-cell;
  vertical-align: middle;  
} 
 
#nav ul{ 
    /* background: #4D4D4D;   */
    padding: 0px; 
    #border-bottom: 1px solid #DDDDDD; 
   # border-right: 1px solid #DDDDDD; 
    #border-left:1px solid #DDDDDD; 
    #border-radius: 0px 0px 3px 3px; 
    /* box-shadow: 3px 2px 5px #000000; 
    -webkit-box-shadow: 3px 2px 5px #000000; 
        -moz-box-shadow:3px 2px 5px #000000; 
    width:150px;
    border-radius: 0px 0px 10px 0px;? */

     
}

 
#nav li:hover{ 
    border: 1px solid #FFFFFF;
    border-radius: 10px 0px 0px 0px;
    width:150px;
 
}
#nav>li>a{ 
    display: block; 
} 


#nav ul li { 
    background: #4D4D4D;
    border-right:none; 
    #border-bottom:1px solid #DDDDDD; 
    width:150px; 
    min-height:39px; 
    padding:5px;
    box-shadow: 2px 2px 3px #4D4D4D;
    -webkit-box-shadow: 2px 2px 3px #4D4D4D;
        -moz-box-shadow:2px 2px 3px #4D4D4D;
    width:150px;
}

 
#nav ul li a { 
    border-right: none;
    text-align:left;
    line-height: 12px;
    color:#FFFFFF;
    display: table-cell;
    vertical-align: middle;
    /* text-shadow: 1px 1px 1px #FFF; */
    #border-bottom:1px solid #FFFFFF;
    #color:#6791AD; 
    #text-shadow: 1px 1px 1px #FFF; 
    #border-bottom:1px solid #FFFFFF; 
} 
/*#nav ul li:hover{background:#000000;border-radius: 0px 0px 0px 0px;}*/
/*#nav ul li:last-child:hover {border-radius: 0px 0px 10px 0px;}*/
 
#nav ul li:hover{border-radius: 0px 0px 0px 0px;}
#nav ul li:last-child:hover {border-radius: 0px 0px 10px 0px;}

#nav ul li:last-child { border-bottom: none;} 
#nav ul li:last-child a{ border-bottom: none;}
 
/* Sub menus */ 
#nav ul{ 
    display: none; 
    visibility:hidden; 
    position: absolute; 
    top: 40px;
    left: -1px; 
} 



#nav li ul li:hover{ 
    border: 0;
    width:150px;
 
}

#nav li a:hover{ 
text-shadow:0px 0px 1px #FFFFFF;
}

#nav ul ul li{
    display: table;
}

#nav>ul>ul>li>a{
    
    line-height: 12px;
    vertical-align: middle;
    padding-left:0px;
    float: left;
}

#nav ul ul li span{
    color: #4D4D4D;
    font: 14px Geneva, Arial, Helvetica, sans-serif;
    text-shadow:none;
    float:left;

}

 
/* Third-level menus */ 
#nav ul ul{
    /* margin-left:1px;  */
    padding-left:10px;
    top: 0px; 
    left:150px; 
    display: none; 
    visibility:hidden; 
    #border: 1px solid #DDDDDD;
    border-radius: 10px 0px 10px 0px; 
}

#nav ul li:last-child{border-radius: 0px 0px 10px 0px;}
#nav ul ul li:first-child {border-radius: 10px 0px 0px 0px;}

#nav ul ul li:first-child:hover {border-radius: 10px 0px 0px 0px;}
#nav ul ul li:last-child:hover {border-radius: 0px 0px 10px 0px;} 
/* Fourth-level menus */ 
#nav ul ul ul{ 
    top: 0px; 
    left:150px; 
    display: none; 
    visibility:hidden; 
    /* border: 1px solid #DDDDDD; */
 
} 
 
#nav ul li{ 
    display: table; 
    visibility:visible; 
    border: 1px solid #4D4D4D;
    float:left;
} 
#nav li:hover > ul{ 
    display: block; 
    visibility:visible; 
}

#nav ul li span{
    color: #4D4D4D;
    font: 14px Geneva, Arial, Helvetica, sans-serif;
    text-shadow:none;
    float:right;

    line-height: 12px;

}


#delimiter{
    width:10px !important;
    border:0 !important;
    z-index : 1;
}

#delimiter :hover{
    
    border: 0 !important;
    padding:0px !important;
    


}
#delimiter a{
    padding:0px !important;
}

 .wrap{
    min-width: 1000px !important;
}
 
<!--[if IE 7]> 
#nav{
    margin-left:0px;

} 
#nav ul{ 
    #left:-40px; 
} 
#nav ul ul{ 
    left:150px; 
} 
#nav ul ul ul{ 
    left:130px; 
} 
<![endif]--> 







<!--Blackmenu>

